--- a/src/sack/styles.css
+++ b/src/sack/styles.css
@@ -23,6 +23,7 @@ TextInput {
     max-height: 8;
     margin-bottom: 1;
     padding: 1;
+    border-right: outer $secondary;
 
     .text-area--cursor-line {
         background: $surface;
@@ -77,6 +78,14 @@ TextInput {
 
 #messages {
     scrollbar-size-vertical: 0;
+}
+
+#chat-header {
+    border-right: outer $secondary;
+    width: 100%;
+    margin-top: 1;
+    margin-bottom: 1;
+    background: $boost;
 }
 
 .msg-container {
