--- a/src/sack/styles.css
+++ b/src/sack/styles.css
@@ -53,7 +53,7 @@ TextInput {
 
 #server-prompt {
     grid-size: 2;
-    grid-rows: 2fr 1fr 2fr;
+    grid-rows: 2fr 1fr 1fr 2fr;
     grid-gutter: 1;
     width: 40;
     height: 10;
