--- a/src/sack/styles.css
+++ b/src/sack/styles.css
@@ -9,7 +9,7 @@ Screen {
 SackHeader {
     #header {
         text-align: center;
-        hatch: left $primary;
+        hatch: left $primary 50%;
         width: 70;
         max-width: 80%;
     }
@@ -21,14 +21,9 @@ SackHeader {
 #options {
     margin-top: 5;
 
-    MenuOption {
+    Option {
         width: 70;
-        max-width: 40%;
         margin-bottom: 1;
-        .shortcut {
-            dock: right;
-            border-right: outer $primary;
-        }
     }
 }
 
@@ -228,18 +223,18 @@ TextInput {
     }
 }
 
-ModalOption {
+Option {
     .option-arrow {
         margin-left: 2;
         margin-right: 1;
         text-opacity: 0%;
     }
     &:focus-within {
-        .option-label {
-            color: $primary;
-        }
         .option-arrow {
             text-opacity: 100%;
+        }
+        &:focus-within {
+            background: $primary 10%;
         }
     }
 
