--- a/src/sack/styles.css
+++ b/src/sack/styles.css
@@ -6,6 +6,13 @@ Screen {
 
 /* ===================================================================== */
 
+.container {
+    width: 70;
+    max-width: 80%;
+}
+
+/* ===================================================================== */
+
 SackHeader {
     dock: top;
     margin-top: 3;
